k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-gitops-v1
  labels:
    app: hello-gitops
spec:
  replicas: 3
  selector:
    matchLabels:
      version: v1.0.0
  template:
    metadata:
      labels:
        app: hello-gitops
        version: v1.0.0
    spec:
      containers:
      - name: hello-gitops
        image: <docker-image-placeholder>
        ports:
        - containerPort: 8050
