k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-gitops
  namespace: hello-gitops
spec:
  selector:
    app: hello-gitops
    version: v1.0.0  # Сначала направляем трафик на v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8050
  type: ClusterIP
